TSVPORTAL-10795: adding new employee to employee message

--- a/app/views/employee-message.html
+++ b/app/views/employee-message.html
@@ -136,7 +136,7 @@
                     </td>
                     <td class="col-xs-1">
                       <button type="button" class="btn btn-success btn-sm text-right"
-                              ng-click="addNewItem('employees')"><i class="fa fa-plus"></i></button>
+                              ng-click="addNewEmployee()"><i class="fa fa-plus"></i></button>
                     </td>
                   </tr>
                 </table>
