--- a/app/views/employee-message.html
+++ b/app/views/employee-message.html
@@ -87,11 +87,11 @@
               <div class="col-xs-8">
                 <label>Employees</label>
               </div>
-              <div class="col-xs-4 text-right" ng-hide="shouldDisable(true) || !employeeMessage.employees.length">
-                <button ng-class="getPropertiesForDeletedButton('employees', 'button')"
+              <div class="col-xs-4 text-right" ng-hide="shouldDisable(true) || !employeeMessage.employeeMessageEmployeeIdentifiers.length">
+                <button ng-class="getPropertiesForDeletedButtonEmployeeIdentifiers('button')"
                         title="delete selected employees"
-                        ng-disabled="getPropertiesForDeletedButton('employees', 'disabled')"
-                        ng-click="removeItems('employees')"
+                        ng-disabled="getPropertiesForDeletedButtonEmployeeIdentifiers('disabled')"
+                        ng-click="removeSelectedEmployeeIdentifiers()"
                         type="button">
                   <i class="fa fa-trash"></i>
                 </button>
@@ -101,9 +101,9 @@
               <tr class="active">
                 <td ng-hide="shouldDisable(true)">
                   <input type="checkbox"
-                           ng-show="employeeMessage.employees.length"
+                           ng-show="employeeMessage.employeeMessageEmployeeIdentifiers.length"
                            ng-model="employeesDeleteAll"
-                           ng-click="toggleSelectAll(employeesDeleteAll, 'employees')">
+                           ng-click="toggleSelectAllEmployeeIdentifiers()">
                 </td>
                 <th>ID</th>
                 <th>Name</th>
