TSVPORTAL-231 - Working on left navigation bar

--- a/app/styles/_containers.scss
+++ b/app/styles/_containers.scss
@@ -10,6 +10,11 @@ body {
   margin-bottom: 20px;
 }
 
+.module-container-epos-configuration {
+  padding-left: 320px;
+  margin-bottom: 20px;
+}
+
 .manualECS-container {
   margin-top:7rem;
 }
