TSVPORTAL-10807 | Implemented Sort based on configuration.

--- a/app/views/store-instance-packing.html
+++ b/app/views/store-instance-packing.html
@@ -69,7 +69,7 @@
             <span>Sort By</span>
   	      </div>
           <div class="col-xs-2  text-right">
-  		    <select ng-init="itemSortOrder = '[salesCategoryName,itemName]'"
+  		    <select
   		          type="text"
                 name="itemSortBy"
                 class="form-control"
@@ -251,7 +251,7 @@
             <span>Sort By</span>
   	      </div>
           <div class="col-xs-2 text-right">
-  		    <select ng-init="offLoadItemsSortOrder = '[salesCategoryName,itemName]'"
+  		    <select
   		          type="text"
                 name="itemSortBy"
                 class="form-control"
