--- a/app/views/store-instance-review.html
+++ b/app/views/store-instance-review.html
@@ -34,7 +34,7 @@
           	<span>Sort By</span> 
  	  	     </div>
         	 <div class="col-xs-2 text-right" >
-  		     <select ng-init="itemSortOrder = '[salesCategoryName,itemName]'" 
+  		     <select
   		          type="text"
                 name="itemSortBy"
                 class="form-control"
