TSVPORTAL-231: TSVPORTAL-10655: recursive modules implementation

--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -10,7 +10,7 @@
 
       <div ng-show="moduleConfiguration" class="">
 
-        <collection ng-if="moduleOptions" collection='moduleOptions'></collection>
+        <modules ng-if="moduleOptions" module-list='moduleOptions'></modules>
       </div>
 
       <!--
