TSVPORTAL-231: TSVPORTAL-10655: added custom css for epos config dynamic form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@
 @import 'directive/step-wizard';
 @import 'fixed-sidebar';
 @import 'directive/error-dialog';
+@import 'directive/epos-config';
 @import 'tax-rates';
 @import 'eula';
 @import 'reconciliation_dashboard';
