--- a/app/views/directives/epos-config-form-single-module.html
+++ b/app/views/directives/epos-config-form-single-module.html
@@ -1,12 +1,12 @@
 <li ng-if="singleModule.optionTypId === 1"> <!-- CheckBox -->
-  <input type="checkbox" ng-model="singleModule.id" id="{{singleModule.id}}"/>
-  <label >{{singleModule.name}}</label>
+  <input type="checkbox" ng-model="singleModule.id" class="maring-right-5px" id="{{singleModule.id}}"/>
+  <label class="epos-config-label">{{singleModule.name}}</label>
 </li>
 <li ng-if="singleModule.optionTypId === 2"> <!-- RadioButton -->
-  <input type="radio" ng-model="singleModule.id" id="{{singleModule.id}}"/>
-  <label >{{singleModule.name}}</label>
+  <input type="radio" ng-model="singleModule.id" class="maring-right-5px" id="{{singleModule.id}}" name="{{singleModule.parentId}}"/>
+  <label class="epos-config-label">{{singleModule.name}}</label>
 </li>
 <li ng-if="singleModule.optionTypId === 3">  <!-- Text -->
-  <label >{{singleModule.name}}</label>
+  <label class="epos-config-label maring-right-5px">{{singleModule.name}}</label>
   <input type="text" ng-model="singleModule.id" id="{{singleModule.id}}"/>
 </li>
