TSVPORTAL-231: TSVPORTAL-10655: handling ngModel for dynamic forms

--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -10,7 +10,7 @@
 
       <div ng-show="moduleConfiguration" class="">
 
-        <modules ng-if="moduleOptions" module-list='moduleOptions'></modules>
+        <modules ng-if="moduleOptions" module-list='moduleOptions' model="moduleOptionValues"></modules>
       </div>
 
       <!--
