--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -1,7 +1,7 @@
 <div class="module-container-epos-configuration">
   <error-dialog form-object="form" error-response="errorResponse" display="displayError">
   </error-dialog>
-  <form class="form-horizontal" name="reportOptions" ng-submit="run()">
+  <form class="form-horizontal" name="reportOptions" ng-submit="saveModuleOptions()">
     <div class="modal-header">
       <h3 class="modal-title">{{ selectedModule.moduleName || 'EPOS Configuration' }}</h3>
     </div>
@@ -12,64 +12,6 @@
 
         <modules ng-if="moduleOptions" module-list='moduleOptions' model="moduleOptionValues"></modules>
       </div>
-
-      <!--
-      <div ng-repeat="option in template.options" class="form-group" ng-switch on="option.type">
-        <label class="col-sm-4 control-label">{{option.prompt}}: <span ng-if="!option.optional" style="color:red">*</span></label>
-        <span ng-switch-when="DATE" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-        <input type="text" class="form-control" name="{{option.code}}" ng-model="selection.options[option.code]" datepicker-popup="{{format}}"
-               datepicker-options="dateOptions" ng-required="!option.optional" close-text="Close" is-open="status.opened"/>
-        <span class="input-group-btn">
-          <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-        </span>
-      </span>
-        <span ng-switch-when="ID" ng-controller="OptionSelectionSelectCtrl" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-        <ui-select ng-if="option.multiValue" name="{{option.code}}" multiple ng-model="selection.options[option.code]">
-          <ui-select-match placeholder="Select value...">{{$item.code}}</ui-select-match>
-          <ui-select-choices repeat="choice in choices | filter: $select.search track by choice.id"
-                             refresh="refreshChoiceValues($select.search)" refresh-delay="10" >
-            <div ><span ng-bind-html="choice.code | highlight: $select.search"/><span ng-if="choice.description !== undefined"> (<span ng-bind-html="choice.description | highlight: $select.search"/>)</span></div>
-          </ui-select-choices>
-        </ui-select>
-        <ui-select ng-if="!option.multiValue" ng-model="selection.options[option.code]">
-          <ui-select-match placeholder="Select value...">{{$select.selected.code}}</ui-select-match>
-          <ui-select-choices repeat="choice in choices | filter: $select.search track by choice.id"
-                             refresh="refreshChoiceValues($select.search)" refresh-delay="10" >
-              <div ><span ng-bind-html="choice.code | highlight: $select.search"/><span ng-if="choice.description !== undefined"> (<span ng-bind-html="choice.description | highlight: $select.search"/>)</span></div>
-          </ui-select-choices>
-        </ui-select>
-      </span>
-        <span ng-switch-when="STRING">
-        <span ng-if="option.multiValue && !option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-          <input type="text" name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]" ng-list="," ng-trim="true" placeholder="seperate values with a comma" />
-        </span>
-        <span ng-if="!option.multiValue && !option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-          <input type="text" name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]"/>
-        </span>
-        <span ng-if="!option.multiValue && option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-          <select name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]" ng-required="false">
-            <option ng-if="option.optional" value="">All</option>
-            <option ng-repeat="choiceValue in option.choiceValues" value="{{choiceValue}}">{{choiceValue}}</option>
-          </select>
-        </span>
-        <span ng-if="option.multiValue && option.choiceValues" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-          <select name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]" multiple>
-            <option ng-repeat="choiceValue in option.choiceValues" value="{{choiceValue}}">{{choiceValue}}</option>
-          </select>
-        </span>
-        <div ng-if="reportOptions[option.code].$error && reportOptions[option.code].$dirty">
-          <p ng-show="reportOptions[option.code].$error.required">{{option.prompt}} is required.</p>
-        </div>
-      </span>
-        <span ng-switch-default class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-        <input type="text" name="{{option.code}}" class="form-control" ng-model="selection.options[option.code]"/>
-      </span>
-        <div ng-if="reportOptions[option.code].$error && reportOptions[option.code].$dirty">
-          <p ng-show="reportOptions[option.code].$error.required">{{option.prompt}} is required.</p>
-        </div>
-      </div>
-      -->
-      <!-- <template-params options="template.options"/> -->
     </div>
     <div class="modal-footer" ng-show="selectedProductVersion && selectedModule">
       <button class="btn btn-primary" type="submit">Save</button>
