--- a/app/views/employee-message.html
+++ b/app/views/employee-message.html
@@ -117,7 +117,6 @@
                 <td colspan="3" class="text-center"> <span class="fa fa-exclamation-circle"></span> No Employees Have Been Added</td>
               </tr>
             </table>
-
             <div class="row" ng-hide="shouldDisable(true)">
               <div class="col-xs-12">
                 <table class="table">
@@ -129,7 +128,7 @@
                         <ui-select-choices
                           refresh="searchEmployees($select)"
                           refresh-delay="300"
-                          repeat="employee in employeesList | filter: $select.search | limitTo:100">
+                          repeat="employee in employeesList | filter: $select.search | unique:'employeeIdentifier' | limitTo:100">
                           {{ employee.employeeIdentifier }} - {{ employee.lastName}}, {{ employee.firstName }}
                         </ui-select-choices>
                       </ui-select>
