--- a/app/views/store-instance-amend.html
+++ b/app/views/store-instance-amend.html
@@ -835,7 +835,7 @@
             </div>
 
             <div class="col-xs-3 text-right">
-              <button class="btn btn-warning" ng-click="showRearrangeSectorModal()" ng-show="canExecuteActions() && hasMoreThanOneUnverifiedCashBags()">
+              <button ng-if="!isAmendReadOnly" class="btn btn-warning" ng-click="showRearrangeSectorModal()" ng-show="canExecuteActions() && hasMoreThanOneUnverifiedCashBags()">
                 <i class="fa fa-tasks active"></i> Rearrange Flight Sectors
               </button>
             </div>
@@ -886,7 +886,7 @@
                         Verified by {{cashBag.verifiedByUser}} on {{cashBag.verifiedOn}}
                       </div>
                       <div class="col-xs-4 text-right">
-                        <button class="btn btn-success btn-xs" ng-click="toggleVerifiedCashBag(cashBag)" ng-show="canExecuteUnferify()">
+                        <button class="btn btn-success btn-xs" ng-click="toggleVerifiedCashBag(cashBag)" ng-show="canExecuteUnferify() && !isAmendReadOnly">
                           <i class="fa fa-times active"></i> Unverify
                         </button>
                       </div>
@@ -975,7 +975,7 @@
                   <h4>Post Trip Sectors</h4>
                 </div>
                 <div class="col-xs-6 text-right">
-                  <button class="btn btn-primary btn-sm" ng-show="canAddPosttripToCashBag(cashBag) && !cashBag.isDeleted && canExecuteActions(cashBag)" ng-click="showAddOrEditScheduleModal(cashBag)" >
+                  <button class="btn btn-primary btn-sm" ng-show="!isAmendReadOnly && canAddPosttripToCashBag(cashBag) && !cashBag.isDeleted && canExecuteActions(cashBag)" ng-click="showAddOrEditScheduleModal(cashBag)" >
                     <i class="fa fa-plus active"></i> Add Post Trip
                   </button>
                   <button class="btn btn-default btn-sm" ng-click="toggleCrewDetails(cashBag, true)" ng-show="!isCrewDataOpen(cashBag)">
@@ -1021,8 +1021,8 @@
                       <td>{{ getOrNA(flightSector.transactionCount) }}</td>
                       <td>{{ getOrNA(flightSector.transactionTotal) }}</td>
                       <td ng-hide="cashBag.isDeleted">
-                        <button class="btn btn-primary btn-xs" ng-click="showAddOrEditScheduleModal(cashBag, flightSector)" ng-show="canExecuteEditActionsPsttrip(cashBag, flightSector)"><i class="fa fa-pencil active"></i></button>
-                        <button class="btn btn-danger btn-xs" ng-click="showDeleteScheduleModal(flightSector, cashBag.id)" ng-show="canExecuteDeleteActionsPsttrip(cashBag, flightSector)"><i class="fa fa-trash active"></i></button>
+                        <button class="btn btn-primary btn-xs" ng-click="showAddOrEditScheduleModal(cashBag, flightSector)" ng-show="!isAmendReadOnly && canExecuteEditActionsPsttrip(cashBag, flightSector)"><i class="fa fa-pencil active"></i></button>
+                        <button class="btn btn-danger btn-xs" ng-click="showDeleteScheduleModal(flightSector, cashBag.id)" ng-show="!isAmendReadOnly && canExecuteDeleteActionsPsttrip(cashBag, flightSector)"><i class="fa fa-trash active"></i></button>
                       </td>
                     </tr>
                     <tr class="subversion-row" ng-show="flightSector.rowOpen">
@@ -1060,13 +1060,13 @@
                   <button class="btn btn-default" title="Refresh Transactions Total" ng-click="refreshManualCashBag(cashBag)" ng-show="cashBag.isManual && !commitionPaidStatus() && !cashBag.isVerified">
                     <i class="fa fa-rotate-right active"></i>
                   </button>
-                  <button class="btn btn-danger" title="Delete Cash Bag" ng-show="canCashBagBeDeleted(cashBag) && canExecuteActions(cashBag)" ng-click="showDeleteCashBagModal(cashBag)">
+                  <button class="btn btn-danger" title="Delete Cash Bag" ng-show="!isAmendReadOnly && canCashBagBeDeleted(cashBag) && canExecuteActions(cashBag)" ng-click="showDeleteCashBagModal(cashBag)">
                     <i class="fa fa-trash active"></i>
                   </button>
-                  <button class="btn btn-warning" title="Merge or Reallocate or Edit Cash Bag " ng-click="showMoveCashBagModal(cashBag)" ng-show="canExecuteAmendCashBag(cashBag)">
+                  <button class="btn btn-warning" title="Merge or Reallocate or Edit Cash Bag " ng-click="showMoveCashBagModal(cashBag)" ng-show="!isAmendReadOnly && canExecuteAmendCashBag(cashBag)">
                     <i class="fa fa-share active"></i>
                   </button>
-                  <button class="btn btn-success" ng-show="canExecuteVerify(cashBag) && canExecuteActions(cashBag) && hasFlightSectors(cashBag)" title="Verify Cash Bag" ng-click="toggleVerifiedCashBag(cashBag)">
+                  <button class="btn btn-success" ng-show="!isAmendReadOnly && canExecuteVerify(cashBag) && canExecuteActions(cashBag) && hasFlightSectors(cashBag)" title="Verify Cash Bag" ng-click="toggleVerifiedCashBag(cashBag)">
                     <i class="fa fa-check-circle-o active"></i>
                   </button>
                 </div>
