--- a/app/views/reconciliation-discrepancy-detail.html
+++ b/app/views/reconciliation-discrepancy-detail.html
@@ -288,7 +288,8 @@
             <span class="hidden-xs">Generate Doc</span>
           </a>       
           <button class="btn btn-sm btn-info" ng-click="showPaymentReportPanel()"><span class="fa fa-file-text"></span> {{actionOnPaymentReport}} Payment Reports</button>
-          <button class="btn btn-sm btn-warning" ng-show="isInStatus('Inbounded') || isInStatus('Discrepancies') || isInStatus('Confirmed') || isInStatus('Commission Paid')" ng-click="goToStoreInstanceAmend()">Amend Data</button>
+          <button ng-if="!isAmendReadOnly" class="btn btn-sm btn-warning" ng-show="isInStatus('Inbounded') || isInStatus('Discrepancies') || isInStatus('Confirmed') || isInStatus('Commission Paid')" ng-click="goToStoreInstanceAmend()">Amend Data</button>
+          <button ng-if="isAmendReadOnly" class="btn btn-sm btn-warning" ng-show="isInStatus('Inbounded') || isInStatus('Discrepancies') || isInStatus('Confirmed') || isInStatus('Commission Paid')" ng-click="goToStoreInstanceAmend()">View Amend Data</button>
           <button ng-if="!isViewMode" class="btn btn-sm btn-danger" ng-show="isInStatus('Confirmed')" ng-click="confirmAction('Discrepancies', 'Unconfirm')">Unconfirm</button>
           <button ng-if="!isViewMode" class="btn btn-sm btn-success" ng-show="isInStatus('Discrepancies')" ng-disabled="storeInstance.amendToConfirm" ng-click="confirmAction('Confirmed', 'Confirm')">Confirm</button>
           <button ng-if="!isViewMode" class="btn btn-sm btn-primary" ng-show="isInStatus('Confirmed')" ng-click="confirmAction('Commission Paid', 'Pay Commission')">Pay Commission</button>
