--- a/app/views/store-instance-amend.html
+++ b/app/views/store-instance-amend.html
@@ -1054,10 +1054,10 @@
                   <button class="btn btn-info" title="Show Payment Report" ng-click="showCashBagPaymentReport(cashBag)">
                     <i class="fa fa-file-text active"></i>
                   </button>
-                  <a href="/#/manual-epos-dashboard/{{ cashBag.id }}" title="Add Manual Data" class="btn btn-primary" title="Manually Add ePOS Data" ng-show="cashBag.isManual && !commitionPaidStatus()  && !cashBag.isVerified">
+                  <a href="/#/manual-epos-dashboard/{{ cashBag.id }}" title="Add Manual Data" class="btn btn-primary" title="Manually Add ePOS Data" ng-show="!isAmendReadOnly && cashBag.isManual && !commitionPaidStatus()  && !cashBag.isVerified">
                     <i class="fa fa-plus-circle active"></i>
                   </a>
-                  <button class="btn btn-default" title="Refresh Transactions Total" ng-click="refreshManualCashBag(cashBag)" ng-show="cashBag.isManual && !commitionPaidStatus() && !cashBag.isVerified">
+                  <button class="btn btn-default" title="Refresh Transactions Total" ng-click="refreshManualCashBag(cashBag)" ng-show="!isAmendReadOnly && cashBag.isManual && !commitionPaidStatus() && !cashBag.isVerified">
                     <i class="fa fa-rotate-right active"></i>
                   </button>
                   <button class="btn btn-danger" title="Delete Cash Bag" ng-show="!isAmendReadOnly && canCashBagBeDeleted(cashBag) && canExecuteActions(cashBag)" ng-click="showDeleteCashBagModal(cashBag)">
