--- a/app/views/company-exchange-rate-edit.html
+++ b/app/views/company-exchange-rate-edit.html
@@ -1,11 +1,11 @@
-<div class="fluid-container">
+<div class="module-container">
     <div class="list-controls">
         <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-6">
                 <h2 class="view-name">{{viewName}}</h2>
             </div>
-            <div class="col-xs-8 text-right">
-              <button ng-if="isFormValidForAddNewExchangeRate()" class="btn btn-primary" tabindex="-1" ng-click="addNewExchangeRate()" style="margin-right: 5px"><span class="fa fa-plus"></span><span class="hidden-xs"> Add Exchange Rate</span></button>
+            <div class="col-xs-6 text-right">
+              <button ng-if="isFormValidForAddNewExchangeRate()" class="btn btn-primary" ng-show="isCRUD" tabindex="-1" ng-click="addNewExchangeRate()" style="margin-right: 5px"><span class="fa fa-plus"></span><span class="hidden-xs"> Add Exchange Rate</span></button>
               <button class="btn btn-default pull-right" data-toggle="collapse" data-target="#search-collapse"
                       aria-expanded="false"
                       aria-controls="search-collapse">
@@ -80,7 +80,7 @@
                             <th width="20%">EasyPay Denomination</th>
                             <th>Exchange Rate*</th>
                             <th colspan="2">Start/End Date*</th>
-                            <th width="8%">Actions</th>
+                            <th ng-show="isCRUD" width="8%">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -122,7 +122,7 @@
 				                  ng-model="exchangeRate.endDate">
 				                </date-picker-field>
                             </td>
-                            <td>
+                            <td ng-show="isCRUD">
                               <button class="btn btn-warning btn-xs" ng-click="duplicateExchangeRate(index, exchangeRate)" ng-if="isExchangeRateAvailableForClone(exchangeRate)">
                                   <i class="fa fa-copy"></i>
                               </button>
@@ -169,3 +169,4 @@
         </div>
     </div>
 </div>
+<dynamic-left-nav></dynamic-left-nav>
